updated readme, fixed implementary guide and removed payment bc i couldn't fix it